# likert_or_not

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  API.md  CLAUDE.md  Dockerfile.backend  PROJECT_PLAN.md  QUESTION_TYPES.md  QUICK_MVP.md  README.md  TEST_ED_review.json  docker-compose.production.yml  docker-compose.yml  tcw-ed-performance-review-2025-08-22.json
.github/workflows/: docker-build.yml  test.yml
backend/: Cargo.toml  Dockerfile
backend/config/: form-template.json
backend/src/: db.rs  email.rs  error.rs  handlers.rs  main.rs  models.rs
config/: form-template.json
frontend/: .eslintrc.cjs  Dockerfile  bunfig.toml  index.html  package.json  test.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AdminDashboard.tsx  AdminLogin.tsx  AdminPage.tsx  CheckboxGroup.tsx  DateTimePicker.tsx  DropdownSelect.tsx  FormEditor.tsx  FormList.tsx  FormPage.tsx  FormResults.tsx  HomePage.tsx  LikertScale.tsx  Logo.tsx  MultipleChoice.tsx  NumberInput.tsx  RatingScale.tsx  SuccessPage.tsx  TextAreaInput.tsx  TextInput.tsx  YesNoQuestion.tsx
frontend/src/hooks/: use-toast.ts
frontend/src/services/: api.ts
frontend/test/: setup.ts
frontend/test/e2e/: form-submission.test.ts
frontend/test/fixtures/: forms.ts
frontend/test/mocks/: handlers.ts
migrations/: 20250822060000_update_question_types.sql  20250822070000_add_form_messages.sql
mvp/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.backend  Makefile  README.md  TESTING_PLAN.md  check_db.sh  docker-compose.coolify.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  run_tests.sh  test_import.sh
mvp/backend/: .env.example  Cargo.toml
mvp/backend/src/: auth.rs  config.rs  db.rs  email.rs  error.rs  handlers.rs  handlers_v2.rs  handlers_v2_simple.rs  handlers_v3.rs  main.rs  models.rs  models_v2.rs
mvp/backend/tests/integration/: api_tests.rs
mvp/config/: README.md  form-schema.json  form-template.json
mvp/config/templates/: all-question-types-demo.json  ed-review.json  employee-satisfaction.json  form-template-with-instructions.json  tcw-ed-review.json
mvp/frontend/: bunfig.toml  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
mvp/frontend/src/: App.tsx  index.css  types.ts
mvp/frontend/test/: setup.ts
mvp/migrations/: 001_initial.sql  002_multi_form_support.sql  003_migrate_existing_form.sql  20250822015853_initial_schema.sql  20250822050000_add_finished_status.sql
scripts/: cleanup_old_tables.sql  clear_localstorage.html  docker-build.sh  migrate_questions.sql  run_migration.sh  run_pii_migration.sh  run_tests.sh
(+36 files in other folders)
