[package]
name = "likert-form-mvp"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
sqlx = { version = "0.8.6", features = [
  "sqlite",
  "runtime-tokio",
  "macros",
  "chrono",
  "json",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs", "trace"] }
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
chrono = { version = "0.4.41", features = ["serde"] }
csv = "1.3.1"
reqwest = { version = "0.12.23", features = ["json"] }
anyhow = "1.0.99"
thiserror = "2.0.16"
bcrypt = "0.17.1"
jsonwebtoken = "9.3.1"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
async-trait = "0.1"

[dev-dependencies]

